--- a/Legacy.bib
+++ b/Legacy.bib
@@ -369,16 +369,7 @@ eprint = {/oup/backfile/content_public/journal/gigascience/6/9/10.1093_gigascien
   year={2017},
   publisher={Nature Publishing Group}
 }
-@article{luciano2018association,
-  title={Association analysis in over 329,000 individuals identifies 116 independent variants influencing neuroticism},
-  author={Luciano, Michelle and Hagenaars, Saskia P and Davies, Gail and Hill, W David and Clarke, Toni-Kim and Shirali, Masoud and Harris, Sarah E and Marioni, Riccardo E and Liewald, David C and Fawns-Ritchie, Chloe and others},
-  journal={Nature genetics},
-  volume={50},
-  number={1},
-  pages={6},
-  year={2018},
-  publisher={Nature Publishing Group}
-}
+
 @article{yucesoy2015genome,
   title={Genome-wide association study identifies novel loci associated with diisocyanate-induced occupational asthma},
   author={Yucesoy, Berran and Kaufman, Kenneth M and Lummus, Zana L and Weirauch, Matthew T and Zhang, Ge and Cartier, Andre and Boulet, Louis-Philippe and Sastre, Joaquin and Quirce, Santiago and Tarlo, Susan M and others},
@@ -398,4 +389,133 @@ eprint = {/oup/backfile/content_public/journal/gigascience/6/9/10.1093_gigascien
   pages={1415--1429},
   year={2016},
   publisher={Elsevier}
+}
+@article{nishida2018key,
+  title={Key HLA-DRB1-DQB1 haplotypes and role of the BTNL2 gene for response to a hepatitis B vaccine},
+  author={Nishida, Nao and Sugiyama, Masaya and Sawai, Hiromi and Nishina, Sohji and Sakai, Aiko and Ohashi, Jun and Khor, Seik-Soon and Kakisaka, Keisuke and Tsuchiura, Takayo and Hino, Keisuke and others},
+  journal={Hepatology},
+  volume={68},
+  number={3},
+  pages={848--858},
+  year={2018},
+  publisher={Wiley Online Library}
+}
+@article{herold2016family,
+  title={Family-based association analyses of imputed genotypes reveal genome-wide significant association of Alzheimer?s disease with OSBPL6, PTPRG, and PDCL3},
+  author={Herold, Christine and Hooli, Basavaraj V and Mullin, Kristina and Liu, Tian and Roehr, Johannes T and Mattheisen, Manuel and Parrado, Antonio R and Bertram, Lars and Lange, Christoph and Tanzi, Rudolph E},
+  journal={Molecular psychiatry},
+  volume={21},
+  number={11},
+  pages={1608},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
+@article{ebejer2013genome,
+  title={Genome-wide association study of inattention and hyperactivity--impulsivity measured as quantitative traits},
+  author={Ebejer, Jane L and Duffy, David L and van der Werf, Julius and Wright, Margaret J and Montgomery, Grant and Gillespie, Nathan A and Hickie, Ian B and Martin, Nicholas G and Medland, Sarah E},
+  journal={Twin Research and Human Genetics},
+  volume={16},
+  number={2},
+  pages={560--574},
+  year={2013},
+  publisher={Cambridge University Press}
+}
+@article{park2015mercapturic,
+  title={Mercapturic acids derived from the toxicants acrolein and crotonaldehyde in the urine of cigarette smokers from five ethnic groups with differing risks for lung cancer},
+  author={Park, Sungshim L and Carmella, Steven G and Chen, Menglan and Patel, Yesha and Stram, Daniel O and Haiman, Christopher A and Le Marchand, Loic and Hecht, Stephen S},
+  journal={PLoS One},
+  volume={10},
+  number={6},
+  pages={e0124841},
+  year={2015},
+  publisher={Public Library of Science}
+}
+@article{gao2018genome,
+  title={Genome-wide association analyses identify new loci influencing intraocular pressure},
+  author={Gao, X Raymond and Huang, Hua and Nannini, Drew R and Fan, Fangda and Kim, Heejin},
+  journal={Human molecular genetics},
+  volume={27},
+  number={12},
+  pages={2205--2213},
+  year={2018},
+  publisher={Oxford University Press}
+}
+@article{nagy2017exploration,
+  title={Exploration of haplotype research consortium imputation for genome-wide association studies in 20,032 Generation Scotland participants},
+  author={Nagy, Reka and Boutin, Thibaud S and Marten, Jonathan and Huffman, Jennifer E and Kerr, Shona M and Campbell, Archie and Evenden, Louise and Gibson, Jude and Amador, Carmen and Howard, David M and others},
+  journal={Genome medicine},
+  volume={9},
+  number={1},
+  pages={23},
+  year={2017},
+  publisher={BioMed Central}
+}
+@article{lutz2015genome,
+  title={A genome-wide association study identifies risk loci for spirometric measures among smokers of European and African ancestry},
+  author={Lutz, Sharon M and Cho, Michael H and Young, Kendra and Hersh, Craig P and Castaldi, Peter J and McDonald, Merry-Lynn and Regan, Elizabeth and Mattheisen, Manuel and DeMeo, Dawn L and Parker, Margaret and others},
+  journal={BMC genetics},
+  volume={16},
+  number={1},
+  pages={138},
+  year={2015},
+  publisher={BioMed Central}
+}
+@article{ellinghaus2016analysis,
+  title={Analysis of five chronic inflammatory diseases identifies 27 new associations and highlights disease-specific patterns at shared loci},
+  author={Ellinghaus, David and Jostins, Luke and Spain, Sarah L and Cortes, Adrian and Bethune, J{\"o}rn and Han, Buhm and Park, Yu Rang and Raychaudhuri, Soumya and Pouget, Jennie G and H{\"u}benthal, Matthias and others},
+  journal={Nature genetics},
+  volume={48},
+  number={5},
+  pages={510},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
+@article{suhre2017connecting,
+  title={Connecting genetic risk to disease end points through the human blood plasma proteome},
+  author={Suhre, Karsten and Arnold, Matthias and Bhagwat, Aditya Mukund and Cotton, Richard J and Engelke, Rudolf and Raffler, Johannes and Sarwath, Hina and Thareja, Gaurav and Wahl, Annika and DeLisle, Robert Kirk and others},
+  journal={Nature communications},
+  volume={8},
+  pages={14357},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
+@article{spracklen2017association,
+  title={Association analyses of East Asian individuals and trans-ancestry analyses with European individuals reveal new loci associated with cholesterol and triglyceride levels},
+  author={Spracklen, Cassandra N and Chen, Peng and Kim, Young Jin and Wang, Xu and Cai, Hui and Li, Shengxu and Long, Jirong and Wu, Ying and Wang, Ya Xing and Takeuchi, Fumihiko and others},
+  journal={Human molecular genetics},
+  volume={26},
+  number={9},
+  pages={1770--1784},
+  year={2017},
+  publisher={Oxford University Press}
+}
+@article{xu2012genome,
+  title={Genome-wide association study in Chinese men identifies two new prostate cancer risk loci at 9q31. 2 and 19q13. 4},
+  author={Xu, Jianfeng and Mo, Zengnan and Ye, Dingwei and Wang, Meilin and Liu, Fang and Jin, Guangfu and Xu, Chuanliang and Wang, Xiang and Shao, Qiang and Chen, Zhiwen and others},
+  journal={Nature genetics},
+  volume={44},
+  number={11},
+  pages={1231},
+  year={2012},
+  publisher={Nature Publishing Group}
+}
+@article{balding1995method,
+  title={A method for quantifying differentiation between populations at multi-allelic loci and its implications for investigating identity and paternity},
+  author={Balding, David J and Nichols, Richard A},
+  journal={Genetica},
+  volume={96},
+  number={1-2},
+  pages={3--12},
+  year={1995},
+  publisher={Springer}
+}
+@article{pritchard2000inference,
+  title={Inference of population structure using multilocus genotype data},
+  author={Pritchard, Jonathan K and Stephens, Matthew and Donnelly, Peter},
+  journal={Genetics},
+  volume={155},
+  number={2},
+  pages={945--959},
+  year={2000},
+  publisher={Genetics Soc America}
 }
